// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DateSelector > should render correctly when disabled 1`] = `
<DocumentFragment>
  <div
    class="govuk-form-group"
  >
    <div
      class="govuk-form-group govuk-!-margin-bottom-0"
      id="field-1"
    >
      <div>
        <label
          class="govuk-label govuk-label--s"
          for="field-1-input"
        >
          Start date
        </label>
      </div>
      <div
        class="govuk-hint"
        id="field1-hint"
      >
        Enter in format DD/MM/YYYY
      </div>
      <div
        class="flex flex-col mt-auto"
      >
        <div
          class=""
        >
          <div
            class="govuk-date-input flex flex-row items-start gap-2 [&_.MuiSvgIcon-root]:fill-govBlue"
          >
            <div
              class="govuk-date-input__item govuk-!-margin-right-0 "
            >
              <div
                class="MuiFormControl-root MuiPickersTextField-root Mui-disabled css-rejvhe-MuiFormControl-root-MuiPickersTextField-root"
              >
                <div
                  aria-invalid="false"
                  class="MuiPickersInputBase-root MuiPickersOutlinedInput-root Mui-disabled MuiPickersInputBase-colorPrimary MuiPickersInputBase-adornedEnd govuk-input govuk-date-input__input govuk-input--width-6 css-1y1yoo4-MuiPickersInputBase-root-MuiPickersOutlinedInput-root"
                  role="group"
                >
                  <div
                    class="MuiPickersSectionList-root MuiPickersInputBase-sectionsContainer css-133j97h-MuiPickersSectionList-root-MuiPickersInputBase-sectionsContainer-MuiPickersOutlinedInput-sectionsContainer"
                    contenteditable="false"
                    tabindex="-1"
                  >
                    <span
                      class="MuiPickersSectionList-section css-hbf96w-MuiPickersSectionList-section-MuiPickersInputBase-section"
                      data-sectionindex="0"
                    >
                      <span
                        class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
                      />
                      <span
                        aria-disabled="true"
                        aria-label="Day"
                        aria-readonly="false"
                        aria-valuemax="31"
                        aria-valuemin="1"
                        aria-valuenow="1"
                        aria-valuetext="1"
                        class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-7g9tpi-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
                        contenteditable="false"
                        inputmode="numeric"
                        role="spinbutton"
                        tabindex="-1"
                      >
                        01
                      </span>
                      <span
                        class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
                      >
                        /
                      </span>
                    </span>
                    <span
                      class="MuiPickersSectionList-section css-hbf96w-MuiPickersSectionList-section-MuiPickersInputBase-section"
                      data-sectionindex="1"
                    >
                      <span
                        class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
                      />
                      <span
                        aria-disabled="true"
                        aria-label="Month"
                        aria-readonly="false"
                        aria-valuemax="12"
                        aria-valuemin="1"
                        aria-valuenow="1"
                        aria-valuetext="January"
                        class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-7g9tpi-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
                        contenteditable="false"
                        inputmode="numeric"
                        role="spinbutton"
                        tabindex="-1"
                      >
                        01
                      </span>
                      <span
                        class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
                      >
                        /
                      </span>
                    </span>
                    <span
                      class="MuiPickersSectionList-section css-hbf96w-MuiPickersSectionList-section-MuiPickersInputBase-section"
                      data-sectionindex="2"
                    >
                      <span
                        class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
                      />
                      <span
                        aria-disabled="true"
                        aria-label="Year"
                        aria-readonly="false"
                        aria-valuemax="9999"
                        aria-valuemin="0"
                        aria-valuenow="2024"
                        class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-7g9tpi-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
                        contenteditable="false"
                        inputmode="numeric"
                        role="spinbutton"
                        tabindex="-1"
                      >
                        2024
                      </span>
                      <span
                        class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
                      />
                    </span>
                  </div>
                  <div
                    class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-elo8k2-MuiInputAdornment-root"
                  />
                  <fieldset
                    aria-hidden="true"
                    class="MuiPickersOutlinedInput-notchedOutline css-lqwr9g-MuiPickersOutlinedInput-notchedOutline"
                  >
                    <legend
                      class="css-gpjuor"
                    >
                      <span
                        class="notranslate css-djyycv"
                      >
                        ​
                      </span>
                    </legend>
                  </fieldset>
                  <input
                    aria-hidden="true"
                    class="MuiPickersInputBase-input MuiPickersOutlinedInput-input css-31lcvl-MuiPickersInputBase-input"
                    disabled=""
                    id="field-1-input"
                    tabindex="-1"
                    value="01/01/2024"
                  />
                </div>
              </div>
            </div>
            <button
              aria-label="Choose Start date date"
              class="flex h-10 w-10 shrink-0 items-center justify-center bg-white outline-none focus:outline-none hover:bg-gray-100 disabled:opacity-50 disabled:cursor-not-allowed [&_.MuiSvgIcon-root]:fill-govBlue"
              disabled=""
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="CalendarIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M17 12h-5v5h5v-5zM16 1v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-1V1h-2zm3 18H5V8h14v11z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DateSelector > should render correctly with an input 1`] = `
<DocumentFragment>
  <div
    class="govuk-form-group"
  >
    <div
      class="govuk-form-group govuk-!-margin-bottom-0"
      id="field-1"
    >
      <div>
        <label
          class="govuk-label govuk-label--s"
          for="field-1-input"
        >
          Start date
        </label>
      </div>
      <div
        class="govuk-hint"
        id="field1-hint"
      >
        Enter in format DD/MM/YYYY
      </div>
      <div
        class="flex flex-col mt-auto"
      >
        <div
          class=""
        >
          <div
            class="govuk-date-input flex flex-row items-start gap-2 [&_.MuiSvgIcon-root]:fill-govBlue"
          >
            <div
              class="govuk-date-input__item govuk-!-margin-right-0 "
            >
              <div
                class="MuiFormControl-root MuiPickersTextField-root css-rejvhe-MuiFormControl-root-MuiPickersTextField-root"
              >
                <div
                  aria-invalid="false"
                  class="MuiPickersInputBase-root MuiPickersOutlinedInput-root MuiPickersInputBase-colorPrimary MuiPickersInputBase-adornedEnd govuk-input govuk-date-input__input govuk-input--width-6 css-1y1yoo4-MuiPickersInputBase-root-MuiPickersOutlinedInput-root"
                  role="group"
                >
                  <div
                    class="MuiPickersSectionList-root MuiPickersInputBase-sectionsContainer css-133j97h-MuiPickersSectionList-root-MuiPickersInputBase-sectionsContainer-MuiPickersOutlinedInput-sectionsContainer"
                    contenteditable="false"
                    tabindex="0"
                  >
                    <span
                      class="MuiPickersSectionList-section css-hbf96w-MuiPickersSectionList-section-MuiPickersInputBase-section"
                      data-sectionindex="0"
                    >
                      <span
                        class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
                      />
                      <span
                        aria-disabled="false"
                        aria-label="Day"
                        aria-readonly="false"
                        aria-valuemax="31"
                        aria-valuemin="1"
                        aria-valuenow="1"
                        aria-valuetext="1"
                        autocapitalize="none"
                        autocorrect="off"
                        class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-7g9tpi-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
                        contenteditable="true"
                        inputmode="numeric"
                        role="spinbutton"
                        spellcheck="false"
                        tabindex="0"
                      >
                        01
                      </span>
                      <span
                        class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
                      >
                        /
                      </span>
                    </span>
                    <span
                      class="MuiPickersSectionList-section css-hbf96w-MuiPickersSectionList-section-MuiPickersInputBase-section"
                      data-sectionindex="1"
                    >
                      <span
                        class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
                      />
                      <span
                        aria-disabled="false"
                        aria-label="Month"
                        aria-readonly="false"
                        aria-valuemax="12"
                        aria-valuemin="1"
                        aria-valuenow="1"
                        aria-valuetext="January"
                        autocapitalize="none"
                        autocorrect="off"
                        class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-7g9tpi-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
                        contenteditable="true"
                        inputmode="numeric"
                        role="spinbutton"
                        spellcheck="false"
                        tabindex="-1"
                      >
                        01
                      </span>
                      <span
                        class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
                      >
                        /
                      </span>
                    </span>
                    <span
                      class="MuiPickersSectionList-section css-hbf96w-MuiPickersSectionList-section-MuiPickersInputBase-section"
                      data-sectionindex="2"
                    >
                      <span
                        class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
                      />
                      <span
                        aria-disabled="false"
                        aria-label="Year"
                        aria-readonly="false"
                        aria-valuemax="9999"
                        aria-valuemin="0"
                        aria-valuenow="2024"
                        autocapitalize="none"
                        autocorrect="off"
                        class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-7g9tpi-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
                        contenteditable="true"
                        inputmode="numeric"
                        role="spinbutton"
                        spellcheck="false"
                        tabindex="-1"
                      >
                        2024
                      </span>
                      <span
                        class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
                      />
                    </span>
                  </div>
                  <div
                    class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-elo8k2-MuiInputAdornment-root"
                  />
                  <fieldset
                    aria-hidden="true"
                    class="MuiPickersOutlinedInput-notchedOutline css-lqwr9g-MuiPickersOutlinedInput-notchedOutline"
                  >
                    <legend
                      class="css-gpjuor"
                    >
                      <span
                        class="notranslate css-djyycv"
                      >
                        ​
                      </span>
                    </legend>
                  </fieldset>
                  <input
                    aria-hidden="true"
                    class="MuiPickersInputBase-input MuiPickersOutlinedInput-input css-31lcvl-MuiPickersInputBase-input"
                    id="field-1-input"
                    tabindex="-1"
                    value="01/01/2024"
                  />
                </div>
              </div>
            </div>
            <button
              aria-label="Choose Start date date"
              class="flex h-10 w-10 shrink-0 items-center justify-center bg-white outline-none focus:outline-none hover:bg-gray-100 disabled:opacity-50 disabled:cursor-not-allowed [&_.MuiSvgIcon-root]:fill-govBlue"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="CalendarIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M17 12h-5v5h5v-5zM16 1v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-1V1h-2zm3 18H5V8h14v11z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DateSelector > should render correctly with errors 1`] = `
<DocumentFragment>
  <div
    class="govuk-form-group govuk-form-group--error"
  >
    <div
      class="govuk-form-group govuk-!-margin-bottom-0"
      id="field-1"
    >
      <div>
        <label
          class="govuk-label govuk-label--s"
          for="field-1-input"
        >
          Start date
        </label>
      </div>
      <div
        class="govuk-hint"
        id="field1-hint"
      >
        Enter in format DD/MM/YYYY
      </div>
      <div
        class="flex flex-col mt-auto"
      >
        <div
          class=""
        >
          <span
            class="govuk-error-message"
            id="field1-error"
          >
            <span
              class="govuk-visually-hidden"
            >
              Error: 
            </span>
            There was an error
          </span>
          <div
            aria-describedby="field1-error"
            class="govuk-date-input flex flex-row items-start gap-2 [&_.MuiSvgIcon-root]:fill-govBlue govuk-input--error"
          >
            <div
              class="govuk-date-input__item govuk-!-margin-right-0 "
            >
              <div
                class="MuiFormControl-root MuiPickersTextField-root css-rejvhe-MuiFormControl-root-MuiPickersTextField-root"
              >
                <div
                  aria-invalid="true"
                  class="MuiPickersInputBase-root MuiPickersOutlinedInput-root Mui-error MuiPickersInputBase-colorPrimary MuiPickersInputBase-adornedEnd govuk-input govuk-date-input__input govuk-input--width-6 css-1y1yoo4-MuiPickersInputBase-root-MuiPickersOutlinedInput-root"
                  role="group"
                >
                  <div
                    class="MuiPickersSectionList-root MuiPickersInputBase-sectionsContainer css-7jzkh4-MuiPickersSectionList-root-MuiPickersInputBase-sectionsContainer-MuiPickersOutlinedInput-sectionsContainer"
                    contenteditable="false"
                    tabindex="0"
                  >
                    <span
                      class="MuiPickersSectionList-section css-hbf96w-MuiPickersSectionList-section-MuiPickersInputBase-section"
                      data-sectionindex="0"
                    >
                      <span
                        class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
                      />
                      <span
                        aria-disabled="false"
                        aria-label="Day"
                        aria-readonly="false"
                        aria-valuemax="31"
                        aria-valuemin="1"
                        aria-valuetext="Empty"
                        autocapitalize="none"
                        autocorrect="off"
                        class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-7g9tpi-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
                        contenteditable="true"
                        inputmode="numeric"
                        role="spinbutton"
                        spellcheck="false"
                        tabindex="0"
                      >
                        DD
                      </span>
                      <span
                        class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
                      >
                        /
                      </span>
                    </span>
                    <span
                      class="MuiPickersSectionList-section css-hbf96w-MuiPickersSectionList-section-MuiPickersInputBase-section"
                      data-sectionindex="1"
                    >
                      <span
                        class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
                      />
                      <span
                        aria-disabled="false"
                        aria-label="Month"
                        aria-readonly="false"
                        aria-valuemax="12"
                        aria-valuemin="1"
                        aria-valuetext="Empty"
                        autocapitalize="none"
                        autocorrect="off"
                        class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-7g9tpi-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
                        contenteditable="true"
                        inputmode="numeric"
                        role="spinbutton"
                        spellcheck="false"
                        tabindex="-1"
                      >
                        MM
                      </span>
                      <span
                        class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
                      >
                        /
                      </span>
                    </span>
                    <span
                      class="MuiPickersSectionList-section css-hbf96w-MuiPickersSectionList-section-MuiPickersInputBase-section"
                      data-sectionindex="2"
                    >
                      <span
                        class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
                      />
                      <span
                        aria-disabled="false"
                        aria-label="Year"
                        aria-readonly="false"
                        aria-valuemax="9999"
                        aria-valuemin="0"
                        aria-valuetext="Empty"
                        autocapitalize="none"
                        autocorrect="off"
                        class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-7g9tpi-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
                        contenteditable="true"
                        inputmode="numeric"
                        role="spinbutton"
                        spellcheck="false"
                        tabindex="-1"
                      >
                        YYYY
                      </span>
                      <span
                        class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
                      />
                    </span>
                  </div>
                  <div
                    class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-elo8k2-MuiInputAdornment-root"
                  />
                  <fieldset
                    aria-hidden="true"
                    class="MuiPickersOutlinedInput-notchedOutline css-lqwr9g-MuiPickersOutlinedInput-notchedOutline"
                  >
                    <legend
                      class="css-gpjuor"
                    >
                      <span
                        class="notranslate css-djyycv"
                      >
                        ​
                      </span>
                    </legend>
                  </fieldset>
                  <input
                    aria-hidden="true"
                    class="MuiPickersInputBase-input MuiPickersOutlinedInput-input css-31lcvl-MuiPickersInputBase-input"
                    id="field-1-input"
                    tabindex="-1"
                    value=""
                  />
                </div>
              </div>
            </div>
            <button
              aria-label="Choose Start date date"
              class="flex h-10 w-10 shrink-0 items-center justify-center bg-white outline-none focus:outline-none hover:bg-gray-100 disabled:opacity-50 disabled:cursor-not-allowed [&_.MuiSvgIcon-root]:fill-govBlue"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="CalendarIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M17 12h-5v5h5v-5zM16 1v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-1V1h-2zm3 18H5V8h14v11z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DateSelector > should render correctly with hint hidden 1`] = `
<DocumentFragment>
  <div
    class="govuk-form-group"
  >
    <div
      class="govuk-form-group govuk-!-margin-bottom-0"
      id="field-1"
    >
      <div>
        <label
          class="govuk-label govuk-label--s"
          for="field-1-input"
        >
          Start date
        </label>
      </div>
      <div
        class="govuk-hint govuk-visually-hidden"
        id="field1-hint"
      >
        Enter in format DD/MM/YYYY
      </div>
      <div
        class="flex flex-col mt-auto"
      >
        <div
          class=""
        >
          <div
            class="govuk-date-input flex flex-row items-start gap-2 [&_.MuiSvgIcon-root]:fill-govBlue"
          >
            <div
              class="govuk-date-input__item govuk-!-margin-right-0 "
            >
              <div
                class="MuiFormControl-root MuiPickersTextField-root css-rejvhe-MuiFormControl-root-MuiPickersTextField-root"
              >
                <div
                  aria-invalid="false"
                  class="MuiPickersInputBase-root MuiPickersOutlinedInput-root MuiPickersInputBase-colorPrimary MuiPickersInputBase-adornedEnd govuk-input govuk-date-input__input govuk-input--width-6 css-1y1yoo4-MuiPickersInputBase-root-MuiPickersOutlinedInput-root"
                  role="group"
                >
                  <div
                    class="MuiPickersSectionList-root MuiPickersInputBase-sectionsContainer css-7jzkh4-MuiPickersSectionList-root-MuiPickersInputBase-sectionsContainer-MuiPickersOutlinedInput-sectionsContainer"
                    contenteditable="false"
                    tabindex="0"
                  >
                    <span
                      class="MuiPickersSectionList-section css-hbf96w-MuiPickersSectionList-section-MuiPickersInputBase-section"
                      data-sectionindex="0"
                    >
                      <span
                        class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
                      />
                      <span
                        aria-disabled="false"
                        aria-label="Day"
                        aria-readonly="false"
                        aria-valuemax="31"
                        aria-valuemin="1"
                        aria-valuetext="Empty"
                        autocapitalize="none"
                        autocorrect="off"
                        class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-7g9tpi-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
                        contenteditable="true"
                        inputmode="numeric"
                        role="spinbutton"
                        spellcheck="false"
                        tabindex="0"
                      >
                        DD
                      </span>
                      <span
                        class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
                      >
                        /
                      </span>
                    </span>
                    <span
                      class="MuiPickersSectionList-section css-hbf96w-MuiPickersSectionList-section-MuiPickersInputBase-section"
                      data-sectionindex="1"
                    >
                      <span
                        class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
                      />
                      <span
                        aria-disabled="false"
                        aria-label="Month"
                        aria-readonly="false"
                        aria-valuemax="12"
                        aria-valuemin="1"
                        aria-valuetext="Empty"
                        autocapitalize="none"
                        autocorrect="off"
                        class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-7g9tpi-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
                        contenteditable="true"
                        inputmode="numeric"
                        role="spinbutton"
                        spellcheck="false"
                        tabindex="-1"
                      >
                        MM
                      </span>
                      <span
                        class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
                      >
                        /
                      </span>
                    </span>
                    <span
                      class="MuiPickersSectionList-section css-hbf96w-MuiPickersSectionList-section-MuiPickersInputBase-section"
                      data-sectionindex="2"
                    >
                      <span
                        class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
                      />
                      <span
                        aria-disabled="false"
                        aria-label="Year"
                        aria-readonly="false"
                        aria-valuemax="9999"
                        aria-valuemin="0"
                        aria-valuetext="Empty"
                        autocapitalize="none"
                        autocorrect="off"
                        class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-7g9tpi-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
                        contenteditable="true"
                        inputmode="numeric"
                        role="spinbutton"
                        spellcheck="false"
                        tabindex="-1"
                      >
                        YYYY
                      </span>
                      <span
                        class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
                      />
                    </span>
                  </div>
                  <div
                    class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-elo8k2-MuiInputAdornment-root"
                  />
                  <fieldset
                    aria-hidden="true"
                    class="MuiPickersOutlinedInput-notchedOutline css-lqwr9g-MuiPickersOutlinedInput-notchedOutline"
                  >
                    <legend
                      class="css-gpjuor"
                    >
                      <span
                        class="notranslate css-djyycv"
                      >
                        ​
                      </span>
                    </legend>
                  </fieldset>
                  <input
                    aria-hidden="true"
                    class="MuiPickersInputBase-input MuiPickersOutlinedInput-input css-31lcvl-MuiPickersInputBase-input"
                    id="field-1-input"
                    tabindex="-1"
                    value=""
                  />
                </div>
              </div>
            </div>
            <button
              aria-label="Choose Start date date"
              class="flex h-10 w-10 shrink-0 items-center justify-center bg-white outline-none focus:outline-none hover:bg-gray-100 disabled:opacity-50 disabled:cursor-not-allowed [&_.MuiSvgIcon-root]:fill-govBlue"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="CalendarIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M17 12h-5v5h5v-5zM16 1v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-1V1h-2zm3 18H5V8h14v11z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DateSelector > should render correctly with no input 1`] = `
<DocumentFragment>
  <div
    class="govuk-form-group"
  >
    <div
      class="govuk-form-group govuk-!-margin-bottom-0"
      id="field-1"
    >
      <div>
        <label
          class="govuk-label govuk-label--s"
          for="field-1-input"
        >
          Start date
        </label>
      </div>
      <div
        class="govuk-hint"
        id="field1-hint"
      >
        Enter in format DD/MM/YYYY
      </div>
      <div
        class="flex flex-col mt-auto"
      >
        <div
          class=""
        >
          <div
            class="govuk-date-input flex flex-row items-start gap-2 [&_.MuiSvgIcon-root]:fill-govBlue"
          >
            <div
              class="govuk-date-input__item govuk-!-margin-right-0 "
            >
              <div
                class="MuiFormControl-root MuiPickersTextField-root css-rejvhe-MuiFormControl-root-MuiPickersTextField-root"
              >
                <div
                  aria-invalid="false"
                  class="MuiPickersInputBase-root MuiPickersOutlinedInput-root MuiPickersInputBase-colorPrimary MuiPickersInputBase-adornedEnd govuk-input govuk-date-input__input govuk-input--width-6 css-1y1yoo4-MuiPickersInputBase-root-MuiPickersOutlinedInput-root"
                  role="group"
                >
                  <div
                    class="MuiPickersSectionList-root MuiPickersInputBase-sectionsContainer css-7jzkh4-MuiPickersSectionList-root-MuiPickersInputBase-sectionsContainer-MuiPickersOutlinedInput-sectionsContainer"
                    contenteditable="false"
                    tabindex="0"
                  >
                    <span
                      class="MuiPickersSectionList-section css-hbf96w-MuiPickersSectionList-section-MuiPickersInputBase-section"
                      data-sectionindex="0"
                    >
                      <span
                        class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
                      />
                      <span
                        aria-disabled="false"
                        aria-label="Day"
                        aria-readonly="false"
                        aria-valuemax="31"
                        aria-valuemin="1"
                        aria-valuetext="Empty"
                        autocapitalize="none"
                        autocorrect="off"
                        class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-7g9tpi-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
                        contenteditable="true"
                        inputmode="numeric"
                        role="spinbutton"
                        spellcheck="false"
                        tabindex="0"
                      >
                        DD
                      </span>
                      <span
                        class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
                      >
                        /
                      </span>
                    </span>
                    <span
                      class="MuiPickersSectionList-section css-hbf96w-MuiPickersSectionList-section-MuiPickersInputBase-section"
                      data-sectionindex="1"
                    >
                      <span
                        class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
                      />
                      <span
                        aria-disabled="false"
                        aria-label="Month"
                        aria-readonly="false"
                        aria-valuemax="12"
                        aria-valuemin="1"
                        aria-valuetext="Empty"
                        autocapitalize="none"
                        autocorrect="off"
                        class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-7g9tpi-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
                        contenteditable="true"
                        inputmode="numeric"
                        role="spinbutton"
                        spellcheck="false"
                        tabindex="-1"
                      >
                        MM
                      </span>
                      <span
                        class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
                      >
                        /
                      </span>
                    </span>
                    <span
                      class="MuiPickersSectionList-section css-hbf96w-MuiPickersSectionList-section-MuiPickersInputBase-section"
                      data-sectionindex="2"
                    >
                      <span
                        class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
                      />
                      <span
                        aria-disabled="false"
                        aria-label="Year"
                        aria-readonly="false"
                        aria-valuemax="9999"
                        aria-valuemin="0"
                        aria-valuetext="Empty"
                        autocapitalize="none"
                        autocorrect="off"
                        class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-7g9tpi-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
                        contenteditable="true"
                        inputmode="numeric"
                        role="spinbutton"
                        spellcheck="false"
                        tabindex="-1"
                      >
                        YYYY
                      </span>
                      <span
                        class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
                      />
                    </span>
                  </div>
                  <div
                    class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-elo8k2-MuiInputAdornment-root"
                  />
                  <fieldset
                    aria-hidden="true"
                    class="MuiPickersOutlinedInput-notchedOutline css-lqwr9g-MuiPickersOutlinedInput-notchedOutline"
                  >
                    <legend
                      class="css-gpjuor"
                    >
                      <span
                        class="notranslate css-djyycv"
                      >
                        ​
                      </span>
                    </legend>
                  </fieldset>
                  <input
                    aria-hidden="true"
                    class="MuiPickersInputBase-input MuiPickersOutlinedInput-input css-31lcvl-MuiPickersInputBase-input"
                    id="field-1-input"
                    tabindex="-1"
                    value=""
                  />
                </div>
              </div>
            </div>
            <button
              aria-label="Choose Start date date"
              class="flex h-10 w-10 shrink-0 items-center justify-center bg-white outline-none focus:outline-none hover:bg-gray-100 disabled:opacity-50 disabled:cursor-not-allowed [&_.MuiSvgIcon-root]:fill-govBlue"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="CalendarIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M17 12h-5v5h5v-5zM16 1v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-1V1h-2zm3 18H5V8h14v11z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
